--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,18 @@ body{
         text-align: center; 
         line-height: 15px;
     }
+    .footer_2{
+        height: 70px;
+    }
+    .icon_footer_2{
+        height: 30px;
+        width: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .footer_3 a{
+        font-size: 12px;
+    }
    
     
 }
@@ -325,17 +337,11 @@ ol{
         margin-bottom: 30px;
         gap: 15px;
     } 
-    .menu_perfumes{
-        position: absolute;
-    }
-    .main_perfumes{
-        display: flex;
-        justify-content: flex-start;
-        
-    }   
+   
+    
 
     .main_perfumes ol{
-        line-height: 35px;
+        line-height: 30px;
         list-style-type: none;
         margin-top: 20px;
         margin-left: 10px;
@@ -468,9 +474,6 @@ ol{
     display: none;
 }
 
-
-
-
 .productos_maquillajes h2{
     font-size: 14px;
 }
@@ -510,6 +513,86 @@ ol{
 .aside{
     width: 15%;
 }
+@media screen and ( min-width:300px) and (max-width:650px){
+    
+    .productos_maquillajes{
+        width: 90%;
+        display: grid;
+        grid-template-columns: 43% 43%;
+        grid-template-rows: auto auto auto auto auto auto ;
+        grid-template-areas: "image1 image2"
+                             "image3 image4"
+                             "image5 image6"
+                             "image7 image8"
+                             "image9 image10"
+                             "image11 image12";
+                             
+        justify-content: center;
+        
+        margin-top: 30px;
+        margin-bottom: 30px;
+        gap: 15px;
+    } 
+    
+    .main_maquillajes{
+        display: flex;
+        justify-content: flex-start;
+        
+    }   
+
+    .main_maquillajes ol{
+        line-height: 30px;
+        list-style-type: none;
+        margin-top: 20px;
+        margin-left: 10px;
+        width: 70px;
+    }
+    .main_maquillajes ol ul{
+        padding-left: 0;
+    }
+   
+    .aside{
+        display: none;
+    }
+    .productos_maquillajes h2{
+        font-weight: bolder;
+        font-size: 11px;
+    }
+    .productos_maquillajes p{
+        font-size: 10px;
+    }
+    
+    .boton_compra_maquillajes button{
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+        border-radius: 20px;
+        font-size: 10px;
+    }
+    .menu_maquillajes{
+        font-size: 12px;
+    }
+    .menu_maquillajes label{
+        font-size: 12px;
+    }
+
+    
+    .footer_2{
+        height: 70px;
+    }
+    .icon_footer_2{
+        height: 30px;
+        width: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .footer_3 a{
+        font-size: 12px;
+    }
+    
+    
+}
+
 /******************* INICIO UÑAS ******************/
 
 .main_maquillajes{
@@ -593,10 +676,7 @@ ol{
     display: none;
 }
 
-
-
-
-.productos_unias h2{
+.productos_maquillajes h2{
     font-size: 14px;
 }
 .boton_compra_maquillajes button{
@@ -635,3 +715,84 @@ ol{
 .aside{
     width: 15%;
 }
+@media screen and ( min-width:300px) and (max-width:650px){
+    
+    .productos_maquillajes{
+        width: 90%;
+        display: grid;
+        grid-template-columns: 43% 43%;
+        grid-template-rows: auto auto auto auto auto auto ;
+        grid-template-areas: "image1 image2"
+                             "image3 image4"
+                             "image5 image6"
+                             "image7 image8"
+                             "image9 image10"
+                             "image11 image12";
+                             
+        justify-content: center;
+        
+        margin-top: 30px;
+        margin-bottom: 30px;
+        gap: 15px;
+    } 
+    
+    .main_maquillajes{
+        display: flex;
+        justify-content: flex-start;
+        
+    }   
+
+    .main_maquillajes ol{
+        line-height: 30px;
+        list-style-type: none;
+        margin-top: 20px;
+        margin-left: 10px;
+        width: 70px;
+    }
+    .main_maquillajes ol ul{
+        padding-left: 0;
+    }
+   
+    .aside{
+        display: none;
+    }
+    .productos_maquillajes h2{
+        font-weight: bolder;
+        font-size: 11px;
+    }
+    .productos_maquillajes p{
+        font-size: 10px;
+    }
+    
+    .boton_compra_maquillajes button{
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+        border-radius: 20px;
+        font-size: 10px;
+    }
+    .menu_maquillajes{
+        font-size: 12px;
+    }
+    .menu_maquillajes label{
+        font-size: 12px;
+    }
+
+    
+    .footer_2{
+        height: 70px;
+    }
+    .icon_footer_2{
+        height: 30px;
+        width: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .footer_3 a{
+        font-size: 12px;
+    }
+    
+    
+}
+
+/******************* INICIO UÑAS ******************/
