--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,14 @@ header a{
     .ul_nav_horizontal{
         margin: 0;
     }
+    .tarjeta_footer_1{
+        height: 60px;
+        width: 60px;
+        
+    }
+    .x{
+        font-size: 10px;
+    }
     .footer_2{
         height: 70px;
     }
@@ -143,7 +151,9 @@ header a{
     .footer_3 a{
         font-size: 12px;
     }
+    
 }
+
 
 
 /******************** INICIO INDEX *********************/
@@ -153,11 +163,11 @@ header a{
     border-radius: 20px;
 }
 .gallery_main{
-    margin: 10px;
+    margin: 5px
 }
 .recommended_1{
     
-    
+    margin: 30px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
@@ -185,7 +195,7 @@ header a{
 .recommended_1 h6{
     font-weight: bolder;
 }
-@media screen and ( min-width:300px) and (max-width:600px){
+@media screen and ( min-width:300px) and (max-width:650px){
     
     
     .recommended_1 h6{
@@ -198,6 +208,7 @@ header a{
     .ul_nav_horizontal li{
         display: none;
     }
+   
     .recommended_1 h6{
         font-size: 11px;
     }
@@ -206,7 +217,17 @@ header a{
         text-align: center; 
         line-height: 15px;
     }
-   
+    .recommended_1{
+    
+        margin: 10px;
+    }
+    .button_recommended{
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+        border-radius: 20px;
+        font-size: 10px;
+    }
     
 }
 
@@ -806,5 +827,10 @@ ol{
     .main_contacto img{
         display: none;
     }
+    .formulario_contacto{
+        padding: 20px;
+        
+    }
+  
 }
 
