--- a/css/stylecss.css
+++ b/css/stylecss.css
@@ -290,273 +290,103 @@ el codigo que corresponde para que lo haga*/
 /******************* INICIO MAQUILLAJES ******************/
 .main_maquillajes {
   display: flex; }
-
-.productos_maquillajes {
-  width: 90%;
-  display: grid;
-  grid-template-columns: 25% 25% 25%;
-  grid-template-rows: auto auto auto auto;
-  grid-template-areas: "image1 image2 image3" "image4 image5 image6" "image7 image8 image9" "image10 image11 image12";
-  justify-content: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  gap: 40px; }
-
-.main_maquillajes input[type="radio"] {
-  display: none; }
-
-.main_maquillajes label {
-  cursor: pointer; }
-
-.main_maquillajes ol {
-  line-height: 50px;
-  list-style-type: none;
-  margin-top: 20px;
-  margin-left: 10px;
-  padding: 0; }
-
-.main_maquillajes ul {
-  list-style-type: none; }
-
-.categorias_maquillajes {
-  width: 140px;
-  padding-left: 20px;
-  /* opacity:0; */ }
-
-.productos_maquillajes img {
-  height: 60%;
-  width: 100%; }
-
-.productos_maquillajes ul {
-  padding: 0; }
-
-.productos_maquillajes li {
-  text-align: center; }
-
-.menu_maquillajes:hover .categorias_maquillajes {
-  opacity: 1; }
-
-.categorias_maquillajes li:hover {
-  padding-left: 20px;
-  font-weight: bolder;
-  /* background-color: antiquewhite; */ }
-
-.main_maquillajes #sombras:checked ~ .productos_maquillajes .rimmel,
-.main_maquillajes #sombras:checked ~ .productos_maquillajes .bases,
-.main_maquillajes #sombras:checked ~ .productos_maquillajes .labiales {
-  display: none; }
-
-.main_maquillajes #rimmel:checked ~ .productos_maquillajes .sombras,
-.main_maquillajes #rimmel:checked ~ .productos_maquillajes .bases,
-.main_maquillajes #rimmel:checked ~ .productos_maquillajes .labiales {
-  display: none; }
-
-.main_maquillajes #bases:checked ~ .productos_maquillajes .rimmel,
-.main_maquillajes #bases:checked ~ .productos_maquillajes .sombras,
-.main_maquillajes #bases:checked ~ .productos_maquillajes .labiales {
-  display: none; }
-
-.main_maquillajes #labiales:checked ~ .productos_maquillajes .rimmel,
-.main_maquillajes #labiales:checked ~ .productos_maquillajes .bases,
-.main_maquillajes #labiales:checked ~ .productos_maquillajes .sombras {
-  display: none; }
-
-.productos_maquillajes h2 {
-  font-size: 14px;
-  font-weight: bolder; }
-
-.boton_compra_maquillajes button {
-  background-color: black;
-  color: white;
-  padding: 5px 20px;
-  border-radius: 20px; }
-
-.boton_compra_maquillajes {
-  opacity: 0; }
-
-.sombras:hover .boton_compra_maquillajes {
-  opacity: 1; }
-
-.rimmel:hover .boton_compra_maquillajes {
-  opacity: 1; }
-
-.bases:hover .boton_compra_maquillajes {
-  opacity: 1; }
-
-.labiales:hover .boton_compra_maquillajes {
-  opacity: 1; }
-
-.sombras {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.rimmel {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.bases {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.labiales {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.aside {
-  width: 15%; }
-
-@media screen and (min-width: 300px) and (max-width: 650px) {
-  .productos_maquillajes {
+  .main_maquillajes ul {
+    list-style-type: none; }
+  .main_maquillajes input[type="radio"] {
+    display: none; }
+  .main_maquillajes ol {
+    line-height: 50px;
+    list-style-type: none;
+    margin-top: 20px;
+    margin-left: 10px;
+    padding: 0; }
+    .main_maquillajes ol .categorias_maquillajes {
+      list-style-type: none;
+      width: 150px; }
+      .main_maquillajes ol .categorias_maquillajes li label {
+        cursor: pointer; }
+      .main_maquillajes ol .categorias_maquillajes li:hover {
+        padding-left: 20px;
+        font-weight: bolder;
+        /* background-color: antiquewhite; */ }
+    .main_maquillajes ol:hover .categorias_maquillajes {
+      opacity: 1; }
+  .main_maquillajes #sombras:checked ~ .productos_maquillajes .rimmel,
+  .main_maquillajes #sombras:checked ~ .productos_maquillajes .bases,
+  .main_maquillajes #sombras:checked ~ .productos_maquillajes .labiales {
+    display: none; }
+  .main_maquillajes #rimmel:checked ~ .productos_maquillajes .sombras,
+  .main_maquillajes #rimmel:checked ~ .productos_maquillajes .bases,
+  .main_maquillajes #rimmel:checked ~ .productos_maquillajes .labiales {
+    display: none; }
+  .main_maquillajes #bases:checked ~ .productos_maquillajes .rimmel,
+  .main_maquillajes #bases:checked ~ .productos_maquillajes .sombras,
+  .main_maquillajes #bases:checked ~ .productos_maquillajes .labiales {
+    display: none; }
+  .main_maquillajes #labiales:checked ~ .productos_maquillajes .rimmel,
+  .main_maquillajes #labiales:checked ~ .productos_maquillajes .bases,
+  .main_maquillajes #labiales:checked ~ .productos_maquillajes .sombras {
+    display: none; }
+  .main_maquillajes .productos_maquillajes {
     width: 90%;
     display: grid;
-    grid-template-columns: 43% 43%;
-    grid-template-rows: auto auto auto auto auto auto;
-    grid-template-areas: "image1 image2" "image3 image4" "image5 image6" "image7 image8" "image9 image10" "image11 image12";
+    grid-template-columns: 25% 25% 25%;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas: "image1 image2 image3" "image4 image5 image6" "image7 image8 image9" "image10 image11 image12";
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    gap: 15px; }
-  .main_maquillajes {
-    display: flex;
-    justify-content: flex-start; }
+    gap: 40px; }
+    .main_maquillajes .productos_maquillajes .sombras {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_maquillajes .productos_maquillajes .sombras:hover .boton_compra_maquillajes {
+        opacity: 1; }
+    .main_maquillajes .productos_maquillajes .rimmel {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_maquillajes .productos_maquillajes .rimmel:hover .boton_compra_maquillajes {
+        opacity: 1; }
+    .main_maquillajes .productos_maquillajes .bases {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_maquillajes .productos_maquillajes .bases:hover .boton_compra_maquillajes {
+        opacity: 1; }
+    .main_maquillajes .productos_maquillajes .labiales {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_maquillajes .productos_maquillajes .labiales:hover .boton_compra_maquillajes {
+        opacity: 1; }
+    .main_maquillajes .productos_maquillajes img {
+      height: 60%;
+      width: 100%; }
+    .main_maquillajes .productos_maquillajes ul {
+      padding: 0; }
+    .main_maquillajes .productos_maquillajes li {
+      text-align: center; }
+    .main_maquillajes .productos_maquillajes h2 {
+      font-size: 14px;
+      font-weight: bolder; }
+    .main_maquillajes .productos_maquillajes .boton_compra_maquillajes {
+      opacity: 0; }
+      .main_maquillajes .productos_maquillajes .boton_compra_maquillajes .btn_compra {
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+        border-radius: 20px; }
+  .main_maquillajes .aside {
+    width: 15%; }
+
+@media screen and (min-width: 300px) and (max-width: 650px) {
+  .main_maquillajes .menu_maquillajes {
+    font-size: 12px; }
+    .main_maquillajes .menu_maquillajes label {
+      font-size: 12px; }
   .main_maquillajes ol {
     line-height: 30px;
     list-style-type: none;
     margin-top: 20px;
     margin-left: 10px;
     width: 70px; }
-  .main_maquillajes ol ul {
-    padding-left: 0; }
-  .aside {
-    display: none; }
-  .productos_maquillajes h2 {
-    font-weight: bolder;
-    font-size: 11px; }
-  .productos_maquillajes p {
-    font-size: 10px; }
-  .boton_compra_maquillajes button {
-    background-color: black;
-    color: white;
-    padding: 5px 20px;
-    border-radius: 20px;
-    font-size: 10px; }
-  .menu_maquillajes {
-    font-size: 12px; }
-  .menu_maquillajes label {
-    font-size: 12px; } }
-
-/******************* INICIO UÑAS ******************/
-.main_unias {
-  display: flex; }
-
-.productos_unias {
-  width: 90%;
-  display: grid;
-  grid-template-columns: 25% 25% 25%;
-  grid-template-rows: auto auto auto auto;
-  grid-template-areas: "image1 image2 image3" "image4 image5 image6" "image7 image8 image9" "image10 image11 image12";
-  justify-content: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  gap: 40px; }
-
-.main_unias input[type="radio"] {
-  display: none; }
-
-.main_unias label {
-  cursor: pointer; }
-
-.main_unias ol {
-  line-height: 50px;
-  list-style-type: none;
-  margin-top: 20px;
-  margin-left: 10px;
-  padding: 0; }
-
-.main_unias ul {
-  list-style-type: none; }
-
-.categorias_unias {
-  width: 140px;
-  padding-left: 20px;
-  /* opacity:0; */ }
-
-.productos_unias img {
-  height: 60%;
-  width: 100%; }
-
-.productos_unias ul {
-  padding: 0; }
-
-.productos_unias li {
-  text-align: center; }
-
-.menu_unias:hover .categorias_unias {
-  opacity: 1; }
-
-.categorias_unias li:hover {
-  padding-left: 20px;
-  font-weight: bolder;
-  /* background-color: antiquewhite; */ }
-
-.main_unias #esmaltes:checked ~ .productos_unias .gel,
-.main_unias #esmaltes:checked ~ .productos_unias .acrilicas,
-.main_unias #esmaltes:checked ~ .productos_unias .removedores {
-  display: none; }
-
-.main_unias #gel:checked ~ .productos_unias .esmaltes,
-.main_unias #gel:checked ~ .productos_unias .acrilicas,
-.main_unias #gel:checked ~ .productos_unias .removedores {
-  display: none; }
-
-.main_unias #acrilicas:checked ~ .productos_unias .gel,
-.main_unias #acrilicas:checked ~ .productos_unias .esmaltes,
-.main_unias #acrilicas:checked ~ .productos_unias .removedores {
-  display: none; }
-
-.main_unias #removedores:checked ~ .productos_unias .gel,
-.main_unias #removedores:checked ~ .productos_unias .acrilicas,
-.main_unias #removedores:checked ~ .productos_unias .esmaltes {
-  display: none; }
-
-.productos_unias h2 {
-  font-size: 14px;
-  font-weight: bolder; }
-
-.boton_compra_unias button {
-  background-color: black;
-  color: white;
-  padding: 5px 20px;
-  border-radius: 20px; }
-
-.boton_compra_unias {
-  opacity: 0; }
-
-.esmaltes:hover .boton_compra_unias {
-  opacity: 1; }
-
-.gel:hover .boton_compra_unias {
-  opacity: 1; }
-
-.acrilicas:hover .boton_compra_unias {
-  opacity: 1; }
-
-.removedores:hover .boton_compra_unias {
-  opacity: 1; }
-
-.esmaltes {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.gel {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.acrilicas {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.removedores {
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
-
-.aside {
-  width: 15%; }
-
-@media screen and (min-width: 300px) and (max-width: 650px) {
-  .productos_unias {
+    .main_maquillajes ol ul {
+      padding-left: 0; }
+  .main_maquillajes .productos_maquillajes {
     width: 90%;
     display: grid;
     grid-template-columns: 43% 43%;
@@ -566,34 +396,143 @@ el codigo que corresponde para que lo haga*/
     margin-top: 30px;
     margin-bottom: 30px;
     gap: 15px; }
-  .main_unias {
-    display: flex;
-    justify-content: flex-start; }
+  .main_maquillajes h2 {
+    font-weight: bolder;
+    font-size: 11px; }
+  .main_maquillajes p {
+    font-size: 10px; }
+  .main_maquillajes .btn_compra {
+    background-color: black;
+    color: white;
+    padding: 5px 20px;
+    border-radius: 20px;
+    font-size: 10px; }
+  .aside {
+    display: none; } }
+
+/******************* INICIO UÑAS ******************/
+.main_unias {
+  display: flex; }
+  .main_unias ul {
+    list-style-type: none; }
+  .main_unias input[type="radio"] {
+    display: none; }
+  .main_unias ol {
+    line-height: 50px;
+    list-style-type: none;
+    margin-top: 20px;
+    margin-left: 10px;
+    padding: 0; }
+    .main_unias ol .categorias_unias {
+      list-style-type: none;
+      width: 150px;
+      /* opacity:0; */ }
+      .main_unias ol .categorias_unias li label {
+        cursor: pointer; }
+      .main_unias ol .categorias_unias li:hover {
+        padding-left: 20px;
+        font-weight: bolder;
+        /* background-color: antiquewhite; */ }
+    .main_unias ol :hover .categorias_unias {
+      opacity: 1; }
+  .main_unias #esmaltes:checked ~ .productos_unias .gel,
+  .main_unias #esmaltes:checked ~ .productos_unias .acrilicas,
+  .main_unias #esmaltes:checked ~ .productos_unias .removedores {
+    display: none; }
+  .main_unias #gel:checked ~ .productos_unias .esmaltes,
+  .main_unias #gel:checked ~ .productos_unias .acrilicas,
+  .main_unias #gel:checked ~ .productos_unias .removedores {
+    display: none; }
+  .main_unias #acrilicas:checked ~ .productos_unias .gel,
+  .main_unias #acrilicas:checked ~ .productos_unias .esmaltes,
+  .main_unias #acrilicas:checked ~ .productos_unias .removedores {
+    display: none; }
+  .main_unias #removedores:checked ~ .productos_unias .gel,
+  .main_unias #removedores:checked ~ .productos_unias .acrilicas,
+  .main_unias #removedores:checked ~ .productos_unias .esmaltes {
+    display: none; }
+  .main_unias .productos_unias {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas: "image1 image2 image3" "image4 image5 image6" "image7 image8 image9" "image10 image11 image12";
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    gap: 40px; }
+    .main_unias .productos_unias .esmaltes {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_unias .productos_unias .esmaltes:hover .boton_compra_unias {
+        opacity: 1; }
+    .main_unias .productos_unias .gel {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_unias .productos_unias .gel:hover .boton_compra_unias {
+        opacity: 1; }
+    .main_unias .productos_unias .acrilicas {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_unias .productos_unias .acrilicas:hover .boton_compra_unias {
+        opacity: 1; }
+    .main_unias .productos_unias .removedores {
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px; }
+      .main_unias .productos_unias .removedores:hover .boton_compra_unias {
+        opacity: 1; }
+    .main_unias .productos_unias img {
+      height: 60%;
+      width: 100%; }
+    .main_unias .productos_unias ul {
+      padding: 0; }
+    .main_unias .productos_unias li {
+      text-align: center; }
+    .main_unias .productos_unias h2 {
+      font-size: 14px;
+      font-weight: bolder; }
+    .main_unias .productos_unias .boton_compra_unias {
+      opacity: 0; }
+      .main_unias .productos_unias .boton_compra_unias .btn_compra {
+        background-color: black;
+        color: white;
+        padding: 5px 20px;
+        border-radius: 20px; }
+  .main_unias .aside {
+    width: 15%; }
+
+@media screen and (min-width: 300px) and (max-width: 650px) {
+  .main_unias .menu_unias {
+    font-size: 12px; }
+    .main_unias .menu_unias label {
+      font-size: 12px; }
   .main_unias ol {
     line-height: 30px;
     list-style-type: none;
     margin-top: 20px;
     margin-left: 10px;
     width: 70px; }
-  .main_unias ol ul {
-    padding-left: 0; }
-  .aside {
-    display: none; }
-  .productos_unias h2 {
+    .main_unias ol ul {
+      padding-left: 0; }
+  .main_unias .productos_unias {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 43% 43%;
+    grid-template-rows: auto auto auto auto auto auto;
+    grid-template-areas: "image1 image2" "image3 image4" "image5 image6" "image7 image8" "image9 image10" "image11 image12";
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    gap: 15px; }
+  .main_unias h2 {
     font-weight: bolder;
     font-size: 11px; }
-  .productos_unias p {
+  .main_unias p {
     font-size: 10px; }
-  .boton_compra_unias button {
+  .main_unias .btn_compra {
     background-color: black;
     color: white;
     padding: 5px 20px;
     border-radius: 20px;
     font-size: 10px; }
-  .menu_unias {
-    font-size: 12px; }
-  .menu_unias label {
-    font-size: 12px; } }
+  .aside {
+    display: none; } }
 
 /******************* INICIO CONTACTO ******************/
 .formulario_contacto {
