--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 
+
 footer{
     .tarjeta_footer_1{
         height: 100px;
@@ -38,4 +39,41 @@ footer{
         text-decoration: none; 
     }
     
+}
+@media only screen and (max-width:700px){
+    .ul_nav_horizontal{
+        margin: 0;
+    }
+
+    footer{
+        .tarjeta_footer_1{
+            height: 60px;
+            width: 60px;
+            
+            .text_f1{
+                font-size: 10px;
+                color: red;
+            }
+        }
+        .footer_2{
+            height: 70px;
+    
+            .icon_footer_2{
+                height: 30px;
+                width: 30px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+        }
+        .footer_3 a{
+            font-size: 12px;
+        }
+    }
+    
+    .btn_home{
+        height: 30px;
+        width: 30px;
+        bottom: 20px;
+        right: 20px;
+    }   
 }
